--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "prjbdfilmes2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
+  "type": "module",
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ViniciusPirees/prjBDFilmes2.git"
@@ -23,5 +26,9 @@
     "express-validator": "^6.13.0",
     "mongodb": "^4.2.0",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
